import {getTester, parsers} from './utils/test.js';

const {test} = getTester(import.meta);
const fsImport = 'import fs from "node:fs";';
const url = 'new URL("./data.json", import.meta.url)';

// These cases intentionally retain filesystem reads that need runtime behavior.
test.snapshot({
	valid: [
		'import data from "./data.json" with {type: "json"};',
		...[
			'let filename = "./data.json"; filename = getPath(); const data = JSON.parse(fs.readFileSync(filename));',
			'let data;',
			'const data = JSON.parse(fs.readFileSync());',
			'const data = JSON.parse(fs.readFileSync("./data.json", "utf8", extra));',
			'const data = JSON.parse(fs.readFileSync("./data.json", {...options}));',
			'const data = JSON.parse(fs.readFileSync("./data.json", {get encoding() { return "utf8"; }}));',
			'const data = JSON.parse(fs.readFileSync("./data.json", {}));',
			'const data = JSON.parse(fs.readFileSync("./data.json", ...options));',
			'const data = JSON.parse(fs[method]("./data.json"));',
			'const data = JSON.parse(fs.promises.readFile("./data.json"));',
			'const data = JSON.parse(fs.readFileSync("./data.json")).name;',
			'const content = fs.readFileSync("./data.json"); const data = JSON.parse(content);',
			'const data = JSON.parse(fs.readFileSync(filename, "utf8"));',
			// eslint-disable-next-line no-template-curly-in-string
			'const data = JSON.parse(fs.readFileSync(`./${name}.json`, "utf8"));',
			'const data = JSON.parse(fs.readFileSync("./data.txt", "utf8"));',
			'const data = JSON.parse(fs.readFileSync("./data.json", "utf16le"));',
			'const data = JSON.parse(fs.readFileSync("./data.json", {encoding: "utf8", flag: "r"}));',
			'const data = JSON.parse(fs.readFileSync("./data.json", options));',
			'const data = JSON.parse(fs.readFileSync("./data.json"), reviver);',
			'const data = JSON.parse(fs.readFileSync(...paths));',
			'const data = JSON.parse(fs.readFileSync?.("./data.json"));',
			'const data = JSON.parse(fs?.readFileSync("./data.json"));',
			'const data = JSON.parse?.(fs.readFileSync("./data.json"));',
			'const data = JSON.parse(await fs.readFile("./data.json", "utf8"));',
			'function load() { return JSON.parse(fs.readFileSync("./data.json")); }',
			'if (enabled) { const data = JSON.parse(fs.readFileSync("./data.json")); }',
			'for (const filename of filenames) { const data = JSON.parse(fs.readFileSync("./data.json")); }',
			'const data = JSON.parse(fs.readFileSync(path.join(directory, "data.json")));',
			'try { const data = JSON.parse(fs.readFileSync("./data.json")); } catch {}',
			'const data = condition && JSON.parse(fs.readFileSync("./data.json"));',
			'const data = JSON.parse(fs.readFileSync(new URL("./data.json", base)));',
			'const data = JSON.parse(fs.readFileSync(new URL(filename, import.meta.url)));',
		].map(code => `${fsImport}\n${code}`),
		'import fs from "other"; const data = JSON.parse(fs.readFileSync("./data.json"));',
		'const data = JSON.parse(readFileSync("./data.json"));',
		...[
			'import type fs from "node:fs"; const data = JSON.parse(fs.readFileSync("./data.json"));',
			'import {type readFileSync} from "node:fs"; const data = JSON.parse(readFileSync("./data.json"));',
		].map(code => ({code, languageOptions: {parser: parsers.typescript}})),
		{code: 'const data = JSON.parse(fs.readFileSync("./data.json"));', languageOptions: {sourceType: 'commonjs'}},
	],
	invalid: [
		...[
			'const data = JSON.parse(fs.readFileSync("./data.json", "utf8"));',
			'const data = JSON.parse(fs.readFileSync("./data.json"));',
			'const data = JSON.parse(fs.readFileSync(`./data.json`, {encoding: "utf-8"}));',
			'const data = JSON.parse(fs.readFileSync("../data.json", null));',
			'const data = JSON.parse(fs.readFileSync("/data.json", undefined));',
			'const data = JSON.parse(fs.readFileSync("./data.json", {encoding: null}));',
			'const data = JSON.parse(fs.readFileSync("./data.json", {encoding: "UTF8"}));',
			'const data = JSON.parse(fs.readFileSync(new URL("../data.json", import.meta.url)));',
			'const data = JSON.parse(fs.readFileSync(new URL("data.json", import.meta.url)));',
			'const data = JSON.parse(fs.readFileSync(new URL("./data#part.json", import.meta.url)));',
			'const data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url)))',
			'const filename = "./data.json"; const data = JSON.parse(fs.readFileSync(filename));',
			'const filename = "data"; const data = JSON.parse(fs.readFileSync("./" + filename + ".json"));',
			'const data = JSON.parse(fs.readFileSync(new URL("./it\'s.json", import.meta.url)));',
			'const data = JSON.parse(fs.readFileSync(new URL("./data?part.json", import.meta.url)));',
			`const data = JSON.parse(fs.readFileSync(${url}));`,
			`const data = (JSON.parse((fs.readFileSync((${url}), "utf8"))));`,
			`const data = JSON.parse(await fs.promises.readFile(${url}, "utf8"));`,
			`const data = JSON.parse(fs.readFileSync(${url})), other = 1;`,
			`const {name} = JSON.parse(fs.readFileSync(${url}));`,
			`export const data = JSON.parse(fs.readFileSync(${url}));`,
			`let data = JSON.parse(fs.readFileSync(${url}));`,
			`var data = JSON.parse(fs.readFileSync(${url}));`,
			`const data /* keep */ = JSON.parse(fs.readFileSync(${url}));`,
			`const data = JSON.parse(fs.readFileSync(/* keep */ ${url}));`,
		].map(code => `${fsImport}\n${code}`),
		`import {readFileSync as read} from "fs"; const data = JSON.parse(read(${url}));`,
		`import * as filesystem from "node:fs"; const data = JSON.parse(filesystem.readFileSync(${url}));`,
		`import fs from "node:fs/promises"; const data = JSON.parse(await fs.readFile(${url}));`,
		`import {readFile as read} from "fs/promises"; const data = JSON.parse(await read(${url}));`,
		`import {promises as fs} from "node:fs"; const data = JSON.parse(await fs.readFile(${url}));`,
		`import {default as fs} from "node:fs"; const data = JSON.parse(fs.readFileSync(${url}));`,
		`import * as fs from "node:fs/promises"; const data = JSON.parse(await fs.readFile(${url}));`,
		...[
			`const data = JSON.parse(fs.readFileSync(${url} as URL));`,
			`const data = JSON.parse(fs.readFileSync(${url}, {encoding: "utf8"} as const));`,
			`const data = JSON.parse(fs.readFileSync(${url}) as string);`,
			`const data = JSON.parse(fs.readFileSync(${url}))!;`,
			`const data = JSON.parse(fs.readFileSync(${url})) satisfies Data;`,
			`const data = <Data>JSON.parse(fs.readFileSync(${url}));`,
		].map(code => ({code: `${fsImport} ${code}`, languageOptions: {parser: parsers.typescript}})),
		{code: `${fsImport} const data: Data = JSON.parse(fs.readFileSync(${url}));`, languageOptions: {parser: parsers.typescript}},
		{code: `${fsImport} const data = JSON.parse(fs.readFileSync(${url})) as Data;`, languageOptions: {parser: parsers.typescript}},
		`${fsImport} const first = JSON.parse(fs.readFileSync(new URL("./first.json", import.meta.url))), second = JSON.parse(fs.readFileSync(new URL("./second.json", import.meta.url)));`,
		`${fsImport} const path = "./data.json"; const data = JSON.parse(fs.readFileSync(new URL(path, import.meta.url)));`,
		`${fsImport}\n// Leading comment\nconst data = JSON.parse(fs.readFileSync(${url})); // Trailing comment`,
		`import {"readFileSync" as read} from "fs"; const data = JSON.parse(read(${url}));`,
		`${fsImport} const data = JSON.parse(fs.readFileSync(${url}, {"encoding": "utf8"}));`,
	],
});
