exports[`prefer-json-import > invalid(1): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(\"./data.json\", \"utf8\")); 1`] = `

  1 | import fs from "node:fs";
  2 | const data = JSON.parse(fs.readFileSync("./data.json", "utf8"));

`;

exports[`prefer-json-import > invalid(1): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(\"./data.json\", \"utf8\")); 2`] = `

Message:
  1 | import fs from "node:fs";
> 2 | const data = JSON.parse(fs.readFileSync("./data.json", "utf8"));
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

`;

exports[`prefer-json-import > invalid(10): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(new URL(\"./data#part.json\", import.meta.url))); 1`] = `

  1 | import fs from "node:fs";
  2 | const data = JSON.parse(fs.readFileSync(new URL("./data#part.json", import.meta.url)));

`;

exports[`prefer-json-import > invalid(10): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(new URL(\"./data#part.json\", import.meta.url))); 2`] = `

Message:
  1 | import fs from "node:fs";
> 2 | const data = JSON.parse(fs.readFileSync(new URL("./data#part.json", import.meta.url)));
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

`;

exports[`prefer-json-import > invalid(11): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))) 1`] = `

  1 | import fs from "node:fs";
  2 | const data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url)))

`;

exports[`prefer-json-import > invalid(11): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))) 2`] = `

Message:
  1 | import fs from "node:fs";
> 2 | const data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url)))
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

Suggestion 1/1: Replace the declaration with a JSON import (changes loading time and caches the data).:
  1 | import fs from "node:fs";
  2 | import data from './data.json' with {type: 'json'};

`;

exports[`prefer-json-import > invalid(12): import fs from \"node:fs\";\nconst filename = \"./data.json\"; const data = JSON.parse(fs.readFileSync(filename)); 1`] = `

  1 | import fs from "node:fs";
  2 | const filename = "./data.json"; const data = JSON.parse(fs.readFileSync(filename));

`;

exports[`prefer-json-import > invalid(12): import fs from \"node:fs\";\nconst filename = \"./data.json\"; const data = JSON.parse(fs.readFileSync(filename)); 2`] = `

Message:
  1 | import fs from "node:fs";
> 2 | const filename = "./data.json"; const data = JSON.parse(fs.readFileSync(filename));
    |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

`;

exports[`prefer-json-import > invalid(13): import fs from \"node:fs\";\nconst filename = \"data\"; const data = JSON.parse(fs.readFileSync(\"./\" + filename + \".json\")); 1`] = `

  1 | import fs from "node:fs";
  2 | const filename = "data"; const data = JSON.parse(fs.readFileSync("./" + filename + ".json"));

`;

exports[`prefer-json-import > invalid(13): import fs from \"node:fs\";\nconst filename = \"data\"; const data = JSON.parse(fs.readFileSync(\"./\" + filename + \".json\")); 2`] = `

Message:
  1 | import fs from "node:fs";
> 2 | const filename = "data"; const data = JSON.parse(fs.readFileSync("./" + filename + ".json"));
    |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

`;

exports[`prefer-json-import > invalid(14): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(new URL(\"./it's.json\", import.meta.url))); 1`] = `

  1 | import fs from "node:fs";
  2 | const data = JSON.parse(fs.readFileSync(new URL("./it's.json", import.meta.url)));

`;

exports[`prefer-json-import > invalid(14): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(new URL(\"./it's.json\", import.meta.url))); 2`] = `

Message:
  1 | import fs from "node:fs";
> 2 | const data = JSON.parse(fs.readFileSync(new URL("./it's.json", import.meta.url)));
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

Suggestion 1/1: Replace the declaration with a JSON import (changes loading time and caches the data).:
  1 | import fs from "node:fs";
  2 | import data from './it\\'s.json' with {type: 'json'};

`;

exports[`prefer-json-import > invalid(15): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(new URL(\"./data?part.json\", import.meta.url))); 1`] = `

  1 | import fs from "node:fs";
  2 | const data = JSON.parse(fs.readFileSync(new URL("./data?part.json", import.meta.url)));

`;

exports[`prefer-json-import > invalid(15): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(new URL(\"./data?part.json\", import.meta.url))); 2`] = `

Message:
  1 | import fs from "node:fs";
> 2 | const data = JSON.parse(fs.readFileSync(new URL("./data?part.json", import.meta.url)));
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

`;

exports[`prefer-json-import > invalid(16): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))); 1`] = `

  1 | import fs from "node:fs";
  2 | const data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url)));

`;

exports[`prefer-json-import > invalid(16): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))); 2`] = `

Message:
  1 | import fs from "node:fs";
> 2 | const data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url)));
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

Suggestion 1/1: Replace the declaration with a JSON import (changes loading time and caches the data).:
  1 | import fs from "node:fs";
  2 | import data from './data.json' with {type: 'json'};

`;

exports[`prefer-json-import > invalid(17): import fs from \"node:fs\";\nconst data = (JSON.parse((fs.readFileSync((new URL(\"./data.json\", import.meta.url)), \"utf8\")))); 1`] = `

  1 | import fs from "node:fs";
  2 | const data = (JSON.parse((fs.readFileSync((new URL("./data.json", import.meta.url)), "utf8"))));

`;

exports[`prefer-json-import > invalid(17): import fs from \"node:fs\";\nconst data = (JSON.parse((fs.readFileSync((new URL(\"./data.json\", import.meta.url)), \"utf8\")))); 2`] = `

Message:
  1 | import fs from "node:fs";
> 2 | const data = (JSON.parse((fs.readFileSync((new URL("./data.json", import.meta.url)), "utf8"))));
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

Suggestion 1/1: Replace the declaration with a JSON import (changes loading time and caches the data).:
  1 | import fs from "node:fs";
  2 | import data from './data.json' with {type: 'json'};

`;

exports[`prefer-json-import > invalid(18): import fs from \"node:fs\";\nconst data = JSON.parse(await fs.promises.readFile(new URL(\"./data.json\", import.meta.url), \"utf8\")); 1`] = `

  1 | import fs from "node:fs";
  2 | const data = JSON.parse(await fs.promises.readFile(new URL("./data.json", import.meta.url), "utf8"));

`;

exports[`prefer-json-import > invalid(18): import fs from \"node:fs\";\nconst data = JSON.parse(await fs.promises.readFile(new URL(\"./data.json\", import.meta.url), \"utf8\")); 2`] = `

Message:
  1 | import fs from "node:fs";
> 2 | const data = JSON.parse(await fs.promises.readFile(new URL("./data.json", import.meta.url), "utf8"));
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

Suggestion 1/1: Replace the declaration with a JSON import (changes loading time and caches the data).:
  1 | import fs from "node:fs";
  2 | import data from './data.json' with {type: 'json'};

`;

exports[`prefer-json-import > invalid(19): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))), other = 1; 1`] = `

  1 | import fs from "node:fs";
  2 | const data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url))), other = 1;

`;

exports[`prefer-json-import > invalid(19): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))), other = 1; 2`] = `

Message:
  1 | import fs from "node:fs";
> 2 | const data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url))), other = 1;
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

`;

exports[`prefer-json-import > invalid(2): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(\"./data.json\")); 1`] = `

  1 | import fs from "node:fs";
  2 | const data = JSON.parse(fs.readFileSync("./data.json"));

`;

exports[`prefer-json-import > invalid(2): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(\"./data.json\")); 2`] = `

Message:
  1 | import fs from "node:fs";
> 2 | const data = JSON.parse(fs.readFileSync("./data.json"));
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

`;

exports[`prefer-json-import > invalid(20): import fs from \"node:fs\";\nconst {name} = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))); 1`] = `

  1 | import fs from "node:fs";
  2 | const {name} = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url)));

`;

exports[`prefer-json-import > invalid(20): import fs from \"node:fs\";\nconst {name} = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))); 2`] = `

Message:
  1 | import fs from "node:fs";
> 2 | const {name} = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url)));
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

`;

exports[`prefer-json-import > invalid(21): import fs from \"node:fs\";\nexport const data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))); 1`] = `

  1 | import fs from "node:fs";
  2 | export const data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url)));

`;

exports[`prefer-json-import > invalid(21): import fs from \"node:fs\";\nexport const data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))); 2`] = `

Message:
  1 | import fs from "node:fs";
> 2 | export const data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url)));
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

`;

exports[`prefer-json-import > invalid(22): import fs from \"node:fs\";\nlet data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))); 1`] = `

  1 | import fs from "node:fs";
  2 | let data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url)));

`;

exports[`prefer-json-import > invalid(22): import fs from \"node:fs\";\nlet data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))); 2`] = `

Message:
  1 | import fs from "node:fs";
> 2 | let data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url)));
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

`;

exports[`prefer-json-import > invalid(23): import fs from \"node:fs\";\nvar data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))); 1`] = `

  1 | import fs from "node:fs";
  2 | var data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url)));

`;

exports[`prefer-json-import > invalid(23): import fs from \"node:fs\";\nvar data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))); 2`] = `

Message:
  1 | import fs from "node:fs";
> 2 | var data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url)));
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

`;

exports[`prefer-json-import > invalid(24): import fs from \"node:fs\";\nconst data /* keep */ = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))); 1`] = `

  1 | import fs from "node:fs";
  2 | const data /* keep */ = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url)));

`;

exports[`prefer-json-import > invalid(24): import fs from \"node:fs\";\nconst data /* keep */ = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))); 2`] = `

Message:
  1 | import fs from "node:fs";
> 2 | const data /* keep */ = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url)));
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

`;

exports[`prefer-json-import > invalid(25): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(/* keep */ new URL(\"./data.json\", import.meta.url))); 1`] = `

  1 | import fs from "node:fs";
  2 | const data = JSON.parse(fs.readFileSync(/* keep */ new URL("./data.json", import.meta.url)));

`;

exports[`prefer-json-import > invalid(25): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(/* keep */ new URL(\"./data.json\", import.meta.url))); 2`] = `

Message:
  1 | import fs from "node:fs";
> 2 | const data = JSON.parse(fs.readFileSync(/* keep */ new URL("./data.json", import.meta.url)));
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

`;

exports[`prefer-json-import > invalid(26): import {readFileSync as read} from \"fs\"; const data = JSON.parse(read(new URL(\"./data.json\", import.meta.url))); 1`] = `

  1 | import {readFileSync as read} from "fs"; const data = JSON.parse(read(new URL("./data.json", import.meta.url)));

`;

exports[`prefer-json-import > invalid(26): import {readFileSync as read} from \"fs\"; const data = JSON.parse(read(new URL(\"./data.json\", import.meta.url))); 2`] = `

Message:
> 1 | import {readFileSync as read} from "fs"; const data = JSON.parse(read(new URL("./data.json", import.meta.url)));
    |                                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

Suggestion 1/1: Replace the declaration with a JSON import (changes loading time and caches the data).:
  1 | import {readFileSync as read} from "fs"; import data from './data.json' with {type: 'json'};

`;

exports[`prefer-json-import > invalid(27): import * as filesystem from \"node:fs\"; const data = JSON.parse(filesystem.readFileSync(new URL(\"./data.json\", import.meta.url))); 1`] = `

  1 | import * as filesystem from "node:fs"; const data = JSON.parse(filesystem.readFileSync(new URL("./data.json", import.meta.url)));

`;

exports[`prefer-json-import > invalid(27): import * as filesystem from \"node:fs\"; const data = JSON.parse(filesystem.readFileSync(new URL(\"./data.json\", import.meta.url))); 2`] = `

Message:
> 1 | import * as filesystem from "node:fs"; const data = JSON.parse(filesystem.readFileSync(new URL("./data.json", import.meta.url)));
    |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

Suggestion 1/1: Replace the declaration with a JSON import (changes loading time and caches the data).:
  1 | import * as filesystem from "node:fs"; import data from './data.json' with {type: 'json'};

`;

exports[`prefer-json-import > invalid(28): import fs from \"node:fs/promises\"; const data = JSON.parse(await fs.readFile(new URL(\"./data.json\", import.meta.url))); 1`] = `

  1 | import fs from "node:fs/promises"; const data = JSON.parse(await fs.readFile(new URL("./data.json", import.meta.url)));

`;

exports[`prefer-json-import > invalid(28): import fs from \"node:fs/promises\"; const data = JSON.parse(await fs.readFile(new URL(\"./data.json\", import.meta.url))); 2`] = `

Message:
> 1 | import fs from "node:fs/promises"; const data = JSON.parse(await fs.readFile(new URL("./data.json", import.meta.url)));
    |                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

Suggestion 1/1: Replace the declaration with a JSON import (changes loading time and caches the data).:
  1 | import fs from "node:fs/promises"; import data from './data.json' with {type: 'json'};

`;

exports[`prefer-json-import > invalid(29): import {readFile as read} from \"fs/promises\"; const data = JSON.parse(await read(new URL(\"./data.json\", import.meta.url))); 1`] = `

  1 | import {readFile as read} from "fs/promises"; const data = JSON.parse(await read(new URL("./data.json", import.meta.url)));

`;

exports[`prefer-json-import > invalid(29): import {readFile as read} from \"fs/promises\"; const data = JSON.parse(await read(new URL(\"./data.json\", import.meta.url))); 2`] = `

Message:
> 1 | import {readFile as read} from "fs/promises"; const data = JSON.parse(await read(new URL("./data.json", import.meta.url)));
    |                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

Suggestion 1/1: Replace the declaration with a JSON import (changes loading time and caches the data).:
  1 | import {readFile as read} from "fs/promises"; import data from './data.json' with {type: 'json'};

`;

exports[`prefer-json-import > invalid(3): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(\`./data.json\`, {encoding: \"utf-8\"})); 1`] = `

  1 | import fs from "node:fs";
  2 | const data = JSON.parse(fs.readFileSync(\`./data.json\`, {encoding: "utf-8"}));

`;

exports[`prefer-json-import > invalid(3): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(\`./data.json\`, {encoding: \"utf-8\"})); 2`] = `

Message:
  1 | import fs from "node:fs";
> 2 | const data = JSON.parse(fs.readFileSync(\`./data.json\`, {encoding: "utf-8"}));
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

`;

exports[`prefer-json-import > invalid(30): import {promises as fs} from \"node:fs\"; const data = JSON.parse(await fs.readFile(new URL(\"./data.json\", import.meta.url))); 1`] = `

  1 | import {promises as fs} from "node:fs"; const data = JSON.parse(await fs.readFile(new URL("./data.json", import.meta.url)));

`;

exports[`prefer-json-import > invalid(30): import {promises as fs} from \"node:fs\"; const data = JSON.parse(await fs.readFile(new URL(\"./data.json\", import.meta.url))); 2`] = `

Message:
> 1 | import {promises as fs} from "node:fs"; const data = JSON.parse(await fs.readFile(new URL("./data.json", import.meta.url)));
    |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

Suggestion 1/1: Replace the declaration with a JSON import (changes loading time and caches the data).:
  1 | import {promises as fs} from "node:fs"; import data from './data.json' with {type: 'json'};

`;

exports[`prefer-json-import > invalid(31): import {default as fs} from \"node:fs\"; const data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))); 1`] = `

  1 | import {default as fs} from "node:fs"; const data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url)));

`;

exports[`prefer-json-import > invalid(31): import {default as fs} from \"node:fs\"; const data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))); 2`] = `

Message:
> 1 | import {default as fs} from "node:fs"; const data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url)));
    |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

Suggestion 1/1: Replace the declaration with a JSON import (changes loading time and caches the data).:
  1 | import {default as fs} from "node:fs"; import data from './data.json' with {type: 'json'};

`;

exports[`prefer-json-import > invalid(32): import * as fs from \"node:fs/promises\"; const data = JSON.parse(await fs.readFile(new URL(\"./data.json\", import.meta.url))); 1`] = `

  1 | import * as fs from "node:fs/promises"; const data = JSON.parse(await fs.readFile(new URL("./data.json", import.meta.url)));

`;

exports[`prefer-json-import > invalid(32): import * as fs from \"node:fs/promises\"; const data = JSON.parse(await fs.readFile(new URL(\"./data.json\", import.meta.url))); 2`] = `

Message:
> 1 | import * as fs from "node:fs/promises"; const data = JSON.parse(await fs.readFile(new URL("./data.json", import.meta.url)));
    |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

Suggestion 1/1: Replace the declaration with a JSON import (changes loading time and caches the data).:
  1 | import * as fs from "node:fs/promises"; import data from './data.json' with {type: 'json'};

`;

exports[`prefer-json-import > invalid(33): import fs from \"node:fs\"; const data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url) as URL)); 1`] = `

  1 | import fs from "node:fs"; const data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url) as URL));

`;

exports[`prefer-json-import > invalid(33): import fs from \"node:fs\"; const data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url) as URL)); 2`] = `

Message:
> 1 | import fs from "node:fs"; const data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url) as URL));
    |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

Suggestion 1/1: Replace the declaration with a JSON import (changes loading time and caches the data).:
  1 | import fs from "node:fs"; import data from './data.json' with {type: 'json'};

`;

exports[`prefer-json-import > invalid(34): import fs from \"node:fs\"; const data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url), {encoding: \"utf8\"} as const)); 1`] = `

  1 | import fs from "node:fs"; const data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url), {encoding: "utf8"} as const));

`;

exports[`prefer-json-import > invalid(34): import fs from \"node:fs\"; const data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url), {encoding: \"utf8\"} as const)); 2`] = `

Message:
> 1 | import fs from "node:fs"; const data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url), {encoding: "utf8"} as const));
    |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

Suggestion 1/1: Replace the declaration with a JSON import (changes loading time and caches the data).:
  1 | import fs from "node:fs"; import data from './data.json' with {type: 'json'};

`;

exports[`prefer-json-import > invalid(35): import fs from \"node:fs\"; const data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url)) as string); 1`] = `

  1 | import fs from "node:fs"; const data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url)) as string);

`;

exports[`prefer-json-import > invalid(35): import fs from \"node:fs\"; const data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url)) as string); 2`] = `

Message:
> 1 | import fs from "node:fs"; const data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url)) as string);
    |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

Suggestion 1/1: Replace the declaration with a JSON import (changes loading time and caches the data).:
  1 | import fs from "node:fs"; import data from './data.json' with {type: 'json'};

`;

exports[`prefer-json-import > invalid(36): import fs from \"node:fs\"; const data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url)))!; 1`] = `

  1 | import fs from "node:fs"; const data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url)))!;

`;

exports[`prefer-json-import > invalid(36): import fs from \"node:fs\"; const data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url)))!; 2`] = `

Message:
> 1 | import fs from "node:fs"; const data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url)))!;
    |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

`;

exports[`prefer-json-import > invalid(37): import fs from \"node:fs\"; const data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))) satisfies Data; 1`] = `

  1 | import fs from "node:fs"; const data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url))) satisfies Data;

`;

exports[`prefer-json-import > invalid(37): import fs from \"node:fs\"; const data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))) satisfies Data; 2`] = `

Message:
> 1 | import fs from "node:fs"; const data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url))) satisfies Data;
    |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

`;

exports[`prefer-json-import > invalid(38): import fs from \"node:fs\"; const data = <Data>JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))); 1`] = `

  1 | import fs from "node:fs"; const data = <Data>JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url)));

`;

exports[`prefer-json-import > invalid(38): import fs from \"node:fs\"; const data = <Data>JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))); 2`] = `

Message:
> 1 | import fs from "node:fs"; const data = <Data>JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url)));
    |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

`;

exports[`prefer-json-import > invalid(39): import fs from \"node:fs\"; const data: Data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))); 1`] = `

  1 | import fs from "node:fs"; const data: Data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url)));

`;

exports[`prefer-json-import > invalid(39): import fs from \"node:fs\"; const data: Data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))); 2`] = `

Message:
> 1 | import fs from "node:fs"; const data: Data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url)));
    |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

`;

exports[`prefer-json-import > invalid(4): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(\"../data.json\", null)); 1`] = `

  1 | import fs from "node:fs";
  2 | const data = JSON.parse(fs.readFileSync("../data.json", null));

`;

exports[`prefer-json-import > invalid(4): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(\"../data.json\", null)); 2`] = `

Message:
  1 | import fs from "node:fs";
> 2 | const data = JSON.parse(fs.readFileSync("../data.json", null));
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

`;

exports[`prefer-json-import > invalid(40): import fs from \"node:fs\"; const data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))) as Data; 1`] = `

  1 | import fs from "node:fs"; const data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url))) as Data;

`;

exports[`prefer-json-import > invalid(40): import fs from \"node:fs\"; const data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))) as Data; 2`] = `

Message:
> 1 | import fs from "node:fs"; const data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url))) as Data;
    |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

`;

exports[`prefer-json-import > invalid(41): import fs from \"node:fs\"; const first = JSON.parse(fs.readFileSync(new URL(\"./first.json\", import.meta.url))), second = JSON.parse(fs.readFileSync(new URL(\"./second.json\", import.meta.url))); 1`] = `

  1 | import fs from "node:fs"; const first = JSON.parse(fs.readFileSync(new URL("./first.json", import.meta.url))), second = JSON.parse(fs.readFileSync(new URL("./second.json", import.meta.url)));

`;

exports[`prefer-json-import > invalid(41): import fs from \"node:fs\"; const first = JSON.parse(fs.readFileSync(new URL(\"./first.json\", import.meta.url))), second = JSON.parse(fs.readFileSync(new URL(\"./second.json\", import.meta.url))); 2`] = `

Message:
> 1 | import fs from "node:fs"; const first = JSON.parse(fs.readFileSync(new URL("./first.json", import.meta.url))), second = JSON.parse(fs.readFileSync(new URL("./second.json", import.meta.url)));
    |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

`;

exports[`prefer-json-import > invalid(41): import fs from \"node:fs\"; const first = JSON.parse(fs.readFileSync(new URL(\"./first.json\", import.meta.url))), second = JSON.parse(fs.readFileSync(new URL(\"./second.json\", import.meta.url))); 3`] = `

Message:
> 1 | import fs from "node:fs"; const first = JSON.parse(fs.readFileSync(new URL("./first.json", import.meta.url))), second = JSON.parse(fs.readFileSync(new URL("./second.json", import.meta.url)));
    |                                                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

`;

exports[`prefer-json-import > invalid(42): import fs from \"node:fs\"; const path = \"./data.json\"; const data = JSON.parse(fs.readFileSync(new URL(path, import.meta.url))); 1`] = `

  1 | import fs from "node:fs"; const path = "./data.json"; const data = JSON.parse(fs.readFileSync(new URL(path, import.meta.url)));

`;

exports[`prefer-json-import > invalid(42): import fs from \"node:fs\"; const path = \"./data.json\"; const data = JSON.parse(fs.readFileSync(new URL(path, import.meta.url))); 2`] = `

Message:
> 1 | import fs from "node:fs"; const path = "./data.json"; const data = JSON.parse(fs.readFileSync(new URL(path, import.meta.url)));
    |                                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

Suggestion 1/1: Replace the declaration with a JSON import (changes loading time and caches the data).:
  1 | import fs from "node:fs"; const path = "./data.json"; import data from './data.json' with {type: 'json'};

`;

exports[`prefer-json-import > invalid(43): import fs from \"node:fs\";\n// Leading comment\nconst data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))); // Trailing comment 1`] = `

  1 | import fs from "node:fs";
  2 | // Leading comment
  3 | const data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url))); // Trailing comment

`;

exports[`prefer-json-import > invalid(43): import fs from \"node:fs\";\n// Leading comment\nconst data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url))); // Trailing comment 2`] = `

Message:
  1 | import fs from "node:fs";
  2 | // Leading comment
> 3 | const data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url))); // Trailing comment
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

Suggestion 1/1: Replace the declaration with a JSON import (changes loading time and caches the data).:
  1 | import fs from "node:fs";
  2 | // Leading comment
  3 | import data from './data.json' with {type: 'json'}; // Trailing comment

`;

exports[`prefer-json-import > invalid(44): import {\"readFileSync\" as read} from \"fs\"; const data = JSON.parse(read(new URL(\"./data.json\", import.meta.url))); 1`] = `

  1 | import {"readFileSync" as read} from "fs"; const data = JSON.parse(read(new URL("./data.json", import.meta.url)));

`;

exports[`prefer-json-import > invalid(44): import {\"readFileSync\" as read} from \"fs\"; const data = JSON.parse(read(new URL(\"./data.json\", import.meta.url))); 2`] = `

Message:
> 1 | import {"readFileSync" as read} from "fs"; const data = JSON.parse(read(new URL("./data.json", import.meta.url)));
    |                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

Suggestion 1/1: Replace the declaration with a JSON import (changes loading time and caches the data).:
  1 | import {"readFileSync" as read} from "fs"; import data from './data.json' with {type: 'json'};

`;

exports[`prefer-json-import > invalid(45): import fs from \"node:fs\"; const data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url), {\"encoding\": \"utf8\"})); 1`] = `

  1 | import fs from "node:fs"; const data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url), {"encoding": "utf8"}));

`;

exports[`prefer-json-import > invalid(45): import fs from \"node:fs\"; const data = JSON.parse(fs.readFileSync(new URL(\"./data.json\", import.meta.url), {\"encoding\": \"utf8\"})); 2`] = `

Message:
> 1 | import fs from "node:fs"; const data = JSON.parse(fs.readFileSync(new URL("./data.json", import.meta.url), {"encoding": "utf8"}));
    |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

Suggestion 1/1: Replace the declaration with a JSON import (changes loading time and caches the data).:
  1 | import fs from "node:fs"; import data from './data.json' with {type: 'json'};

`;

exports[`prefer-json-import > invalid(5): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(\"/data.json\", undefined)); 1`] = `

  1 | import fs from "node:fs";
  2 | const data = JSON.parse(fs.readFileSync("/data.json", undefined));

`;

exports[`prefer-json-import > invalid(5): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(\"/data.json\", undefined)); 2`] = `

Message:
  1 | import fs from "node:fs";
> 2 | const data = JSON.parse(fs.readFileSync("/data.json", undefined));
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

`;

exports[`prefer-json-import > invalid(6): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(\"./data.json\", {encoding: null})); 1`] = `

  1 | import fs from "node:fs";
  2 | const data = JSON.parse(fs.readFileSync("./data.json", {encoding: null}));

`;

exports[`prefer-json-import > invalid(6): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(\"./data.json\", {encoding: null})); 2`] = `

Message:
  1 | import fs from "node:fs";
> 2 | const data = JSON.parse(fs.readFileSync("./data.json", {encoding: null}));
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

`;

exports[`prefer-json-import > invalid(7): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(\"./data.json\", {encoding: \"UTF8\"})); 1`] = `

  1 | import fs from "node:fs";
  2 | const data = JSON.parse(fs.readFileSync("./data.json", {encoding: "UTF8"}));

`;

exports[`prefer-json-import > invalid(7): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(\"./data.json\", {encoding: \"UTF8\"})); 2`] = `

Message:
  1 | import fs from "node:fs";
> 2 | const data = JSON.parse(fs.readFileSync("./data.json", {encoding: "UTF8"}));
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

`;

exports[`prefer-json-import > invalid(8): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(new URL(\"../data.json\", import.meta.url))); 1`] = `

  1 | import fs from "node:fs";
  2 | const data = JSON.parse(fs.readFileSync(new URL("../data.json", import.meta.url)));

`;

exports[`prefer-json-import > invalid(8): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(new URL(\"../data.json\", import.meta.url))); 2`] = `

Message:
  1 | import fs from "node:fs";
> 2 | const data = JSON.parse(fs.readFileSync(new URL("../data.json", import.meta.url)));
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

Suggestion 1/1: Replace the declaration with a JSON import (changes loading time and caches the data).:
  1 | import fs from "node:fs";
  2 | import data from '../data.json' with {type: 'json'};

`;

exports[`prefer-json-import > invalid(9): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(new URL(\"data.json\", import.meta.url))); 1`] = `

  1 | import fs from "node:fs";
  2 | const data = JSON.parse(fs.readFileSync(new URL("data.json", import.meta.url)));

`;

exports[`prefer-json-import > invalid(9): import fs from \"node:fs\";\nconst data = JSON.parse(fs.readFileSync(new URL(\"data.json\", import.meta.url))); 2`] = `

Message:
  1 | import fs from "node:fs";
> 2 | const data = JSON.parse(fs.readFileSync(new URL("data.json", import.meta.url)));
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a JSON import over reading and parsing a JSON file.

`;
